# libGEL

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: FindSDL2.cmake
include/: gel.h
include/gel/: engine.h  geometry.h  math.h
include/gel/geometry/: box.h  capsule.h  ellipsoid.h  frustrum.h  mesh.h  model.h  plane.h  sphere.h  triangle.h  vertex.h
include/gel/math/: clamp.h  math.h  matrix.h  quat.h  vector.h
src/geometry/: geometry.c
src/math/: clamp.c  mat2_1.c  mat2_2.c  mat3_1.c  math.c  quat_1.c  quat_2.c  v2_1.c  vec2_1.c  vec2_2.c  vec2_3.c  vec2_4.c  vec3_1.c  vec3_2.c  vec3_3.c  vec3_4.c  vec4_1.c  vec4_2.c  vec4_3.c  vec4_4.c
src/v2/: add.c
